--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,59 @@
     --gradient: linear-gradient(129deg, #71b920 0%, #488a25 100%);
     --grad-footer: linear-gradient(-90deg, rgba(72, 138, 37, 0) 0%, #488a25 100%);
 }
+.hover-horizontal {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    background: transparent;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+.hover-horizontal:before,
+.hover-horizontal:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #eff6ed;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 50%;
+    transform-origin: 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+.hover-horizontal:hover,
+.hover-horizontal:focus,
+.hover-horizontal:active,
+.navbar-nav>li.active .hover-horizontal,
+.navbar-nav>li.dropdown li>a.hover-horizontal:hover,
+.navbar-nav>li.dropdown li>a.hover-horizontal:focus,
+.navbar-nav>li.dropdown li>a.hover-horizontal:active{
+    color: #000;
+}
+.hover-horizontal:hover:before,
+.hover-horizontal:focus:before,
+.hover-horizontal:active:before,
+.navbar-nav>li.active .hover-horizontal:before,
+.navbar-nav>li.dropdown li>a.hover-horizontal:hover:before,
+.navbar-nav>li.dropdown li>a.hover-horizontal:focus:before,
+.navbar-nav>li.dropdown li>a.hover-horizontal:active:before{
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
 
 * {
     margin: 0;
@@ -59,10 +112,10 @@ body {
     margin-top: .5rem;
 }
 
-.navbar-default .navbar-nav>li>a:focus,
+/*.navbar-default .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav>li>a:hover {
     background-color: #eff6ed;
-}
+}*/
 
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
