--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -44,8 +44,10 @@ transition: all 0.5s ease;
 
 @media(max-width:992px){
         #menu-lateral.toggled.toggle-right .sidebar-wrapper.right {width: 30%;right: 50%; display: block;}
-    
-    .navbar-brand{padding:10px;float:none;margin:auto!important}
+
+    .navbar-brand{padding:10px;
+        /*float:none;*/
+        margin:auto!important}
     .navbar-toggle-sidebar{float:left;margin-left:15px}
     .navbar-header{color:#fff}
     .nav.navbar-nav>li>a{padding-left:20px;font-size:14px}
@@ -53,13 +55,13 @@ transition: all 0.5s ease;
     #bs-example-navbar-collapse-1.collapse.in{right:0}
     .modal{z-index:500251}
     #menu-lateral.toggled.toggle-right .sidebar-wrapper.right,#menu-lateral.toggled.toggle-left .sidebar-wrapper.left{width:33%}
-    .left-toggle{position:absolute;left:0}
-    .right-toggle{position:absolute;right:0}
+    /*.left-toggle{position:absolute;left:0}*/
+    /*.right-toggle{position:absolute;right:0}*/
     .navbar-header{width:100%;position:relative}
     .navbar-logo{height:100%;width:100%;display:flex;align-items:center center}
     .sidebar-nav{margin-left:0}
-    .sidebar-wrapper.right{background-image:none;background-color:#30608c;z-index:99;max-width:250px}
-    .sidebar-wrapper{margin-top:52px;max-width:250px;background-color:#30608c;padding-top:10px;    width: 33%;left: 0;}
+    .sidebar-wrapper.right{background-image:none;background-color:#488a25;z-index:99;max-width:250px}
+    .sidebar-wrapper{margin-top:52px;max-width:250px;background-color:#488a25;padding-top:10px;    width: 33%;left: 0;}
     .sidebar-wrapper>div{width:250px}
     .sidebar-wrapper .menu{padding:0;width:auto}
     .logo_container{text-align:center}
@@ -78,12 +80,10 @@ transition: all 0.5s ease;
     .icono-lateral{height:30px}
 
     .open>.dropdown-menu.multi-level {display: block;height: auto;width: 100%;position: relative;background-color: transparent;border: none;}
-    
-    .sidebar-wrapper .dropdown-backdrop{z-index: -1}
-    
-    .left .sidebar-nav li .multi-level a:last-child{padding: 10px 40px 10px 0px;}
-    
 
+    .sidebar-wrapper .dropdown-backdrop{z-index: -1}
+
+    .left .sidebar-nav li .multi-level a:last-child{padding: 10px 40px 10px 0px;}
 }
 
 @media (max-width: 767px) {
