--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
 
 .navbar-brand img {
     margin-top: 3px;
-    max-height: 60px;
+    max-height: 52px;
     filter: invert(48%) sepia(18%) saturate(1849%) hue-rotate(55deg) brightness(91%) contrast(82%);
 }
 
@@ -279,7 +279,7 @@ nav {
     }
 
     .navbar-brand {
-        height: 60px;
+        height: 52px;
     }
 
     .navbar-brand img {
@@ -353,14 +353,14 @@ nav {
         margin: 0;
         /*padding-left: 2rem;*/
         /*padding-right: 2rem;*/
-        padding: 2.5rem;
+        padding: 19px 15px;
     }
 
     .navbar-default .navbar-toggle .icon-bar {
         background-color: #fff;
     }
     .navbar-brand img {
-        height: 50px;
+        height: 48px;
     }
     .navbar {
         border: none;
@@ -681,7 +681,7 @@ nav {
 .adorno {
     display: flex;
     align-items: center;
-    margin-left: -4rem;
+    margin-left: -5rem;
     margin-top: -1.5rem;
     width: 40px;height: 40px;
 }
@@ -702,7 +702,7 @@ nav {
 
     }
     .articles .article__two article h1 {
-        white-space: normal;
+        /*white-space: normal;*/
     }
     .articles article {
         margin: 0 15rem;
@@ -777,12 +777,13 @@ nav {
     }
     .articles article h1 {
         font-size: 3rem;
-        white-space: normal;
+        /*white-space: normal;*/
     }
     .article__one h1 img {
         margin-right: 0;
     }
-    .adorno {
+    .articles .article__two .adorno {
+        display: none;
         margin-left: 0;
     }
     .article__one h1 {
@@ -794,13 +795,21 @@ nav {
     }
 
 }
-@media (max-width: 392px) {
-    .articles article h1 {
-         /*font-size: 2.7rem;*/
-        white-space: normal;
+@media (max-width: 412px) {
+    .article__two article h1 {
+         font-size: 2.7rem;
     }
     .article__one h1 img {
+        display: none;
         margin-right: 1rem;
+    }
+    .article__one article h1 {
+        font-size: 2.7rem;
+    }
+}
+@media (max-width: 360px) {
+    .article__two article h1 {
+         font-size: 2.5rem;
     }
 }
 /*_________*/
@@ -809,13 +818,15 @@ nav {
 }
 
 .tipos h1 {
+    white-space: nowrap;
     margin: 0;
     padding: 1.5rem 0;
     opacity: .5;
     text-align: center;
     color: var(--green);
     border-top: .1px #83cd41 solid;
-    font-size: 65px;
+    /*font-size: 65px;*/
+    font-size: 6vw !important;
     line-height: 50px;
     font-weight: 600;
     font-family: "Poppins";
@@ -868,6 +879,10 @@ nav {
 }
 
 .skew_container {
+    background-image: url(icons/Forma_corte_fondo_verde.svg);
+    background-color: var(--light-green);
+    background-repeat: no-repeat;
+    background-position: bottom;
     margin: 0 auto;
     overflow: hidden;
     padding-bottom: 4%;
@@ -875,14 +890,14 @@ nav {
 }
 
 .skew_container .bg-skew {
-    background: var(--light-green);
+    /*background: var(--light-green);*/
     text-align: center;
     padding-top: 9%;
     margin-top: -9%;
     /*margin-top: -20%;*/
     /*width: 300vh;*/
     /*height: 125vh;*/
-    transform: skewY(5deg);
+    /*transform: skewY(5deg);*/
     /*transform: skew(330deg, 330deg);*/
     /*transform: skew(60deg, 357deg);*/
     /*border-radius: 1rem;*/
@@ -892,7 +907,7 @@ nav {
     width: 70%;
     margin: auto;
     padding: 5rem 0;
-    transform: skewY(-5deg);
+    /*transform: skewY(-5deg);*/
     /*transform: skew(-60deg, -357deg);*/
 }
 
@@ -912,9 +927,9 @@ nav {
     margin: 0;
     text-align: left;
     /*width: 573px;*/
-    /*white-space: nowrap;*/
+    white-space: nowrap;
     /*height: 115px;*/
-    font-size: 40px;
+    font-size: 4rem;
     letter-spacing: -1px;
     /*line-height: 73px;*/
     color: #333333;
@@ -955,6 +970,7 @@ nav {
 }
 
 .the_article button {
+    margin-top: 4rem;
     width: 174px;
     height: 40px;
     border-radius: 5px;
@@ -1003,7 +1019,7 @@ nav {
     }
 
     .tipos h1 {
-        font-size: 27px;
+        font-size: 3.7rem;
     }
 
 
@@ -1011,7 +1027,18 @@ nav {
         padding-top: 0;
         margin-top: 0;
     }
+    .article__1 h3 {
+        text-align: center;
+        font-size: 3rem;
+        margin-bottom: 4rem;
+    }
+    .article__1 .the_article .adorno {
+        display: none;
+    }
 }
+    .article__1 p {
+        font-size: 16px;
+    }
 
 @media (max-width: 800px) {
     .select-options button {
@@ -1022,6 +1049,33 @@ nav {
 @media (min-width: 515px) and (max-width: 992px) {
     .article-img {
         width: 440px !important;
+    }
+}
+@media (max-width: 412px) {
+    .tipos h1 {
+        font-size: 2.5rem;
+    }
+    .article__1 h3 {
+        font-size: 2.8rem;
+    }
+    .content_ul .select-options {
+        gap: 5px;
+        text-align: center;
+        justify-content: center;
+    }
+    .content_ul .select-options li {
+        font-size: 1em;
+    }
+    .content_ul .select-options li a {
+        padding: 6px 12px;
+    }
+}
+@media (max-width: 375px) {
+    .tipos h1 {
+         font-size: 2.2rem;
+    }
+    .article__1 h3 {
+        font-size: 2.2rem;
     }
 }
 
@@ -1100,10 +1154,22 @@ nav {
         margin-left: 0;
         margin-top: 4rem;
     }
+    .install__article .adorno {
+        display: none;
+    }
+    .install__article p {
+        margin-top: 3rem;
+    }
 }
-@media (max-width: 515px) {
+@media (max-width: 420px) {
     .install__article h1 {
-        font-size: 35px;
+        font-size: 3.2rem;
+        height: auto;
+    }
+}
+@media (max-width: 375px) {
+    .install__article h1 {
+        font-size: 2.8rem;
         height: auto;
     }
 }
