--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,16 @@
     --gradient: linear-gradient(129deg, #71b920 0%, #488a25 100%);
     --grad-footer: linear-gradient(-90deg, rgba(72, 138, 37, 0) 0%, #488a25 100%);
 }
+
+p {
+    font-family: 'Open Sans', sans-serif !important;
+}
+
+@media (max-width: 412px) {
+    p {
+        font-size: 16px !important;
+    }
+}
 .hover-horizontal {
     display: inline-block;
     vertical-align: middle;
@@ -179,12 +189,11 @@ nav {
 .contactanos {
     z-index: 999;
     width: 250px;
-    /*background: linear-gradient(129deg, #71b920 0%, #488a25 70%);*/
     background: linear-gradient(129deg, #55bc00 50%, #218d08 70%);
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 90px 1fr;
-    padding: 1rem 0;
+    padding: 1.3rem 0;
     transform: skew(25deg);
     color: #FFF;
 }
@@ -195,9 +204,9 @@ nav {
     top: 10px;
     grid-row: 1 / 3;
     background-color: #83cd41;
-    padding: 1.2rem;
-    width: 44px;
-    height: 44px;
+    padding: 10px 10px;
+    width: 38px;
+    height: 38px;
     justify-self: center;
 }
 
@@ -699,18 +708,22 @@ nav {
     display: flex;
     align-items: center;
     margin-left: -5rem;
-    margin-top: -1.5rem;
+    margin-top: -1.4rem;
+}
+.adorno img {
     width: 40px;height: 40px;
 }
 /*.articles .article__two article */
 .adorno:after {
-    content:" ";
+    margin-top: 10px;
+    margin-bottom: 5px;
+    content: " ";
     height: 1px;
     width: 130px;
     background: #55bc00;
     display: block;
     position: absolute;
-    margin-left: 4rem ;
+    margin-left: 41px;
 }
 
 @media (max-width: 1300px) {
@@ -1283,7 +1296,7 @@ nav {
 }
 
 .info__content ul li {
-    margin: 1rem 0;
+    margin: 2.2rem 0;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1297,13 +1310,6 @@ nav {
     gap: 10px;
     flex-wrap: nowrap;
     white-space: nowrap;
-}
-
-.phone {
-    /*font-family: "Baloo";*/
-    /*font-size: 19px;*/
-    /*color: #ffffff;*/
-    /*font-weight: 500;*/
 }
 
 .info__content ul li img {
