--- a/styles.css
+++ b/styles.css
@@ -208,9 +208,9 @@ nav {
     top: 10px;
     grid-row: 1 / 3;
     background-color: #83cd41;
-    padding: 8px 10px;
-    width: 35px;
-    height: 36px;
+    padding: 10px 12px;
+    width: 40px;
+    height: 44px;
     justify-self: center;
 }
 
@@ -227,13 +227,17 @@ nav {
 }
 
 .contactanos h4 {
+    font-size: 16px;
     margin-left: -5px;
     grid-column: 2 / 3;
+    font-weight: 500;
+    line-height: .7
 }
 
 .contactanos p {
-    margin-left: 5px;
-    font-size: 1rem;
+    font-weight: 300;
+    margin-left: 2px;
+    font-size: 12px;
 }
 
 
